start adding just more things

--- a/cmd/gateway/nextjs/pages/_markdown/now.mdx
+++ b/cmd/gateway/nextjs/pages/_markdown/now.mdx
@@ -1,4 +1,4 @@
-# About Lorem ipsum 
+# NOW Lorem ipsum 
 
 dolor sit amet, consectetur adipiscing elit. Proin urna eros, fringilla sed hendrerit vel, dignissim suscipit purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
 
