experimenting with exporting props from mdx files

--- a/cmd/gateway/nextjs/pages/markdown/about.mdx
+++ b/cmd/gateway/nextjs/pages/markdown/about.mdx
@@ -1,16 +1,18 @@
-# About Lorem ipsum 
+export const title = "about Frank"
 
-dolor sit amet, consectetur adipiscing elit. Proin urna eros, fringilla sed hendrerit vel, dignissim suscipit purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+# About Lorem ipsum
 
-## Fusce ultrices arcu vel sagittis tempus. 
+dolor sit amet, consectetur adipiscing elit. Proin urna eros, fringilla sed hendrerit vel, dignissim suscipit purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 
-Maecenas tincidunt eleifend dictum. 
+## Fusce ultrices arcu vel sagittis tempus.
 
-- Nullam finibus, 
-- ipsum sit amet suscipit sagittis, 
-- nulla neque bibendum dolor, 
-- vel venenatis velit urna et metus. 
+Maecenas tincidunt eleifend dictum.
 
-### Nulla aliquet dignissim arcu et pretium. 
+- Nullam finibus,
+- ipsum sit amet suscipit sagittis,
+- nulla neque bibendum dolor,
+- vel venenatis velit urna et metus.
+
+### Nulla aliquet dignissim arcu et pretium.
 
 Donec sit amet sapien dignissim, iaculis lorem sit amet, pellentesque massa. Vivamus lacinia nulla eu lectus volutpat, in interdum turpis blandit. Suspendisse ultrices tincidunt neque. Duis vulputate quis enim egestas tristique. Fusce pulvinar cursus diam nec suscipit. Mauris quis mi quis orci dignissim iaculis.
