--- a/cmd/gateway/nextjs/pages/blog_content/about.mdx
+++ b/cmd/gateway/nextjs/pages/blog_content/about.mdx
@@ -1,10 +1,13 @@
+export const publishDate = Date.now()
+export const tags = ["tag1", "tag2"]
 export const title = "about Frank"
+export const summary = "dolor sit amet, consectetur adipiscing elit. Proin urna eros, fringilla sed hendrerit vel, dignissim suscipit purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
 
 # About Lorem ipsum
 
 dolor sit amet, consectetur adipiscing elit. Proin urna eros, fringilla sed hendrerit vel, dignissim suscipit purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 
-## Fusce ultrices arcu vel sagittis tempus.
+### Fusce ultrices arcu vel sagittis tempus.
 
 Maecenas tincidunt eleifend dictum.
 
